Small fixes to content, changed fonts and images slightly

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
   <!-- Custom fonts for this site -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oxygen:300italic,400italic,700italic,300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Multi:300italic,400italic,700italic,300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto:300italic,400italic,700italic,300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:300,400,700' rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
@@ -114,11 +117,11 @@
   <header class="masthead text-center text-white cd-fixed-bg cd-fixed-bg--1">
     <div class="container">
       <div class="grid --center --middle" style="height: 100vh; min-height: 650px;">
-        <div class="grid__item --s-12 --m-8">
+        <div class="grid__item --s-12 --m-9">
           <h1 class="text-uppercase">
             <strong>Mikrodosering</strong>
           </h1>
-          <img class="mb-4 mt-3" width="74" src="img/es_logo_white.svg" alt="">
+          <img class="mb-4 mt-3" width="94" src="img/es_logo_white.svg" alt="">
           <p class="text-faded mb-5">Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin. En standard mikrodose er 10µg
             med LSD eller 0,1 gram med tørket psilocybinsopp. Det er omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige
             intervaller, for eksempel hver tredje dag, og over lengre tid.</p>
@@ -131,9 +134,9 @@
   <section class="es-gradient" id="hvorfor">
     <div class="container">
       <div class="grid --center">
-        <div class="grid__item --s-11 --m-8 text-center">
+        <div class="grid__item --s-11 --m-10 text-center">
           <h2 class="section-heading">Hvorfor mikrodosere</h2>
-          <hr class="text-primary mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
           <div class="text-muted mb-4 text-left">
             <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering
               av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde:
@@ -155,11 +158,11 @@
       <div class="grid --center text-center">
         <div class="grid__item --s-12 --m-8 text-faded">
           <h2 class="section-heading text-white">Hvordan mikrodosere</h2>
-          <hr class="light mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
         </div>
       </div>
       <div class="grid --center">
-        <div class="grid__item --s-11 --m-8">
+        <div class="grid__item --s-11 --m-10">
           <div class="block --bg-primary --pt --pb --border-radius text-faded">
             <p>Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent
               10µg LSD eller 0,1g tørket psilocybinsopp. Når man mikrodoserer tar man vanligvis en dose to til tre ganger i uken, vanligvis
@@ -197,7 +200,7 @@
       <div class="row">
         <div class="col-lg-12 mx-auto text-center">
           <h2 class="section-heading">Hva sier andre om mikrodosering?</h2>
-          <hr class="text-primary mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
           <div class="row mx-auto text-center">
             <div class="col-lg-6">
               <blockquote class="quote-box bg-primary">
@@ -289,13 +292,13 @@
   <section class="cd-fixed-bg cd-fixed-bg--3" id="forskning">
     <div class="container">
       <div class="grid --center">
-        <div class="grid__item --s-11 --m-8 text-center text-faded">
+        <div class="grid__item --s-11 --m-10 text-center text-faded">
           <h2 class="section-heading text-white">Hva sier forskningen?</h2>
-          <hr class="light mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
         </div>
       </div>
       <div class="grid --center">
-        <div class="grid__item --s-11 --m-8 text-faded">
+        <div class="grid__item --s-11 --m-10 text-faded">
           <div class="bg-dark card rounded pt-5 pb-4 mb-4">
             <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over
               tusen erfaringsrapporter (kilde:
@@ -306,14 +309,32 @@
             <div class="text-left text-faded">
               <div class="my-3">
                 <p>
-                  <strong>Lenker til forskning:</strong>
+                  <strong>Vil du bidra til forskningen?</strong>
+                </p>
+                <p>
+                  Hvis du ønsker å bidra til mer forskning på effekten av mikrodosering, kan du melde deg på det første placebo-kontrollerte studiet som noensine er forsøkt gjennom lenken under.
                 </p>
                 <div class="mb-3">
-                  <a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(10)61462-6/abstract">
+                  <a target="_blank" href="https://selfblinding-microdose.org">
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
-                    Risiko knyttet til bruk av LSD og psilocybin (http://www.thelancet.com/)
+                    Info om studiet og påmelding (https://selfblinding-microdose.org)
+                  </a>
+                </div>
+              </div>
+             </div>
+            <div class="text-left text-faded">
+              <div class="my-3">
+                <p>
+                  <strong>Øvrige lenker til forskning:</strong>
+                </p>
+                <div class="mb-3">
+                  <a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(10)61462-6/abstract">
+                    <span class="fa-stack link">
+                      <i class="fas fa-link"></i>
+                    </span>
+                    Risiko knyttet til bruk av LSD og psilocybin (http://www.thelancet.com)
                   </a>
                 </div>
                 <div class="mb-3">
@@ -321,7 +342,7 @@
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
-                    Psykedelika og mental helse (http://journals.plos.org/)
+                    Psykedelika og mental helse (http://journals.plos.org)
                   </a>
                 </div>
                 <div class="mb-3">
@@ -329,7 +350,7 @@
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
-                    Mulige effekter på humør og affektive lidelser (https://www.nature.com/)
+                    Mulige effekter på humør og affektive lidelser (https://www.nature.com)
                   </a>
                 </div>
                 <div class="mb-3">
@@ -337,7 +358,7 @@
                     <span class="fa-stack">
                       <i class="fas fa-link"></i>
                     </span>
-                    Psykedelika og endringer i hjernefunksjon (https://www.pnas.org/)
+                    Psykedelika og endringer i hjernefunksjon (https://www.pnas.org)
                   </a>
                 </div>
               </div>
@@ -346,21 +367,20 @@
         </div>
       </div>
       <div class="grid --center">
-        <div class="grid__item --s-11 --m-8 text-center">
+        <div class="grid__item --s-11 --m-10 text-center">
           <hr class="transparent mt-3">
           <a class="button btn_hide --white js-scroll-trigger" href="#effekter">potensielle nytteefekter</a>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
   <section class="es-gradient" id="effekter">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
+        <div class="col-lg-9 mx-auto text-center">
           <h2 class="section-heading">Potensielle nytteeffekter</h2>
-          <hr class="text-primary mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
           <div class="text-muted my-4 text-left mb-5">
             <h5 class="my-3">Forbedret funksjonsevne</h5>
             <p>Mange mikrodoserer fordi de mener det gjør at de fungerer bedre, både på jobb, trening og sosialt. Det kan være
@@ -502,19 +522,18 @@
   <section class="bg-primary" id="risiko">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
+        <div class="col-lg-9 mx-auto text-center">
           <h2 class="section-heading">Risiko ved mikrodosering</h2>
-          <hr class="light mt-4 mb-5">
+          <hr class="transparent mt-4 mb-5">
           <div class="text-faded text-left">
             <div class="text-center text-primary">
               <div class="bg-white rounded px-5 pt-4 pb-4 mb-5">
-                <!-- h4>Viktig</h4 -->
                 <div class="sr-warning2">
                   <i class="fas fa-exclamation-triangle fa-2x mt-2 mb-3"></i>
-                </div>
+                
                 <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller
                   fengselsstraff.
-                </p>
+                </p></div>
               </div>
             </div>
             <p>Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler. Psykedelika
@@ -556,7 +575,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 mx-auto text-center">
+        <div class="col-lg-12 mx-auto text-center">
           <hr class="transparent mt-5 pt-2">
           <a class="button btn_hide --white js-scroll-trigger" href="#lenker">mer informasjon</a>
         </div>
@@ -569,7 +588,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Mer informasjon</h2>
-          <hr class="light mt-4 mb-5">
+          <hr class="transparent">
           <div class="text-muted mb-3">
             <span>Mer informasjon om mikrodosering kan finnes på disse nettsidene:</span>
           </div>
@@ -639,10 +658,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="es-logo section-heading text-primary">EMMASOFIA</h2>
-          <img class="mb-4 mt-3" width="74" src="img/es_logo_primary.svg" alt="">
+          <img class="mb-5 mt-4" width="84" src="img/es_logo_primary.svg" alt="">
           <p class="mb-5 text-muted">EmmaSofia er en politisk medlemsorganisasjon som arbeider for å få Norge over til en kunnskapsbasert ruspolitikk.
             Emma betyr "universell" og Sofia betyr "visdom". Sofia referer til "de vises sten".</p>
-          <a class="button --white --outline" target="_blank" href="https://emmasofia.no/medlem/">støtt oss</a>
+          <a class="button --white --outline mb-2" target="_blank" href="https://emmasofia.no/medlem/">støtt oss</a>
         </div>
       </div>
     </div>
