Fixed double period

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
             <p>Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler. Psykedelika
               er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene
               av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et
-              par måneder av gangen..</p>
+              par måneder av gangen.</p>
             <p>&nbsp;</p>
             <p>I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
               Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser,
