--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <strong>Vil du bidra til forskningen?</strong>
                 </p>
                 <p>
-                  Hvis du ønsker å bidra til mer forskning på effekten av mikrodosering, kan du melde deg på det første placebo-kontrollerte studiet som noensine er forsøkt gjennom lenken under.
+                  Hvis du ønsker å bidra til mer forskning på effekten av mikrodosering, kan du melde deg på det første placebo-kontrollerte studiet på effekten av mikrodosering ved å følge lenken under.
                 </p>
                 <div class="mb-3">
                   <a target="_blank" href="https://selfblinding-microdose.org">
@@ -635,7 +635,7 @@
         </div>
         <div class="col-lg-6">
           <div class="linkbox">
-            <a target="_blank" href="https://www.youtube.com/watch?v=KbdVGoT9wsE">
+            <a target="_blank" href="https://www.youtube.com/watch?v=n8_ZI1GGEXE">
               <div class="mx-auto mt-4 text-center py-5">
                 <span class="fa-stack my-3">
                   <i class="fas fa-2x fa-video"></i>
