Fixed logo size in Internet Explorer 11

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <h1 class="text-uppercase">
             <strong>Mikrodosering</strong>
           </h1>
-          <img class="mb-4 mt-3" width="94" src="img/es_logo_white.svg" alt="">
+          <img class="mb-4 mt-3" width="94" height="94" src="img/es_logo_white.svg" alt="">
           <p class="text-faded mb-5">Å mikrodosere er å ta små doser, vanligvis med psykedelika som LSD eller psilocybin. En standard mikrodose er 10µg
             med LSD eller 0,1 gram med tørket psilocybinsopp. Det er omtrent 10% av en vanlig brukerdose. Mikrodosene blir tatt med regelmessige
             intervaller, for eksempel hver tredje dag, og over lengre tid.</p>
@@ -658,7 +658,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="es-logo section-heading text-primary">EMMASOFIA</h2>
-          <img class="mb-5 mt-4" width="84" src="img/es_logo_primary.svg" alt="">
+          <img class="mb-5 mt-4" width="84" height="84" src="img/es_logo_primary.svg" alt="">
           <p class="mb-5 text-muted">EmmaSofia er en politisk medlemsorganisasjon som arbeider for å få Norge over til en kunnskapsbasert ruspolitikk.
             Emma betyr "universell" og Sofia betyr "visdom". Sofia referer til "de vises sten".</p>
           <a class="button --white --outline mb-2" target="_blank" href="https://emmasofia.no/medlem/">støtt oss</a>
