--- a/index.html
+++ b/index.html
@@ -659,8 +659,12 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="es-logo section-heading text-primary">EMMASOFIA</h2>
           <img class="mb-5 mt-4" width="84" height="84" src="img/es_logo_primary.svg" alt="">
-          <p class="mb-5 text-muted">EmmaSofia er en politisk medlemsorganisasjon som arbeider for å få Norge over til en kunnskapsbasert ruspolitikk.
-            Emma betyr "universell" og Sofia betyr "visdom". Sofia referer til "de vises sten".</p>
+          <p class="mb-5 text-muted">EmmaSofia er en politisk og ideell organisasjon, som startet opp i
+            2015. Emma betyr «universell» og Sofia betyr «visdom». Sofia referer
+            til «de vises sten». Vi er en del av en gryende folkebevegelse som
+            ønsker lovregulering av MDMA og psykedelika med kvalitetskontroll og
+            forbrukervern.
+          </p>
           <a class="button --white --outline mb-2" target="_blank" href="https://emmasofia.no/medlem/">støtt oss</a>
         </div>
       </div>
