--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 
     <!-- Contact -->
     <section id="contact" class=".bg-white">
-      <div class="container">
+      <div class="container mb-5">
         <div class="row text-center">
           <div class="col-md-8 mx-auto">
             <img height="128" src="img/logo_black.png" alt="">
