Changed bottom logo to SVG, changed top logo to higher resolution

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a  class="js-scroll-trigger" href="#page-top"><img src="img/logo-nav.png" alt="" title="" /></img></a>
+        <a class="js-scroll-trigger mt-1" href="#page-top"><img height="30px" src="img/logo_nav.png" alt="" title="" /></img></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Meny
           <i class="fa fa-bars"></i>
@@ -572,7 +572,7 @@
       <div class="container mb-5">
         <div class="row text-center">
           <div class="col-md-8 mx-auto">
-            <img height="128" src="img/logo_black.png" alt="">
+            <img class="mt-5 mb-5" height="50em" src="img/logo_black.svg" alt="">
             <p class="section-subheading text-muted">
               Psynapse er et nettverk som jobber for å skape anerkjennelse og forståelse for
               bruk av psykedelika og MDMA, både i rekreasjonelle, seremonielle eller terapeutiske former.
