Fixed font color consistency

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h3 class="section-subheading text-muted">Hva sier andre om mikrodosering?</h3>
           </div>
         </div>
-        <div class="row">
+        <div class="row text-muted">
           <div class="card mb-4">
             <div class="card-body">
               <h6 class="card-title">
@@ -264,7 +264,7 @@
                 <a href="http://www.psychedelicexplorersguide.com/" target="_blank">The Psychedelic Explorer's Guide:</a> "[...] I've avoided coming to any general conclusions about these low
                 doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use
                 has been positive".</p>
-              <div class="text-faded">
+              <div class="text-muted">
                 <div class="my-3">
                   <p>
                     <strong>Vil du bidra til forskningen?</strong>
@@ -279,7 +279,7 @@
                   </div>
                 </div>
                </div>
-              <div class="text-left text-faded">
+              <div class="text-left text-muted">
                 <div class="my-3">
                   <p>
                     <strong>Øvrige lenker til forskning:</strong>
@@ -456,10 +456,10 @@
     <section id="risk" class="bg-white">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
+          <div class="col-lg-12 text-center mt-4 text-muted">
             <h2 class="section-heading text-uppercase">Risiko</h2>
             <h3 class="section-subheading text-muted">Risiko ved mikrodosering</h3>
-            <div class="text-faded text-left">
+            <div class="text-muted text-left">
               <div class="text-center text-primary">
                 <div class="primarybg rounded px-5 mt-5 pt-4 pb-4 mb-4">
                   <i class="fa fa-exclamation-triangle fa-2x mt-2 mb-2"></i>
