Added hover effect to button

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   for eksempel hver tredje dag, og over lengre tid.
                 </p>
               </div>
-              <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger mt-5" href="#why">Lær mer</a>
+              <a class="btn btn-xl text-uppercase js-scroll-trigger mt-5" href="#why">Lær mer</a>
             </div>
           </div>
         </div>
