Added higher resolution images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.png<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -514,7 +514,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/1.jpg" alt="">
+              <img class="img-fluid" src="img/thumbnails/1.png" alt="">
             </a>
             <div class="grid-caption">
               <h4>Microdosing</h4>
@@ -528,7 +528,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/2.jpg" alt="">
+              <img class="img-fluid" src="img/thumbnails/2.png" alt="">
             </a>
             <div class="grid-caption">
               <h4>Microdosing Psychedelics</h4>
@@ -542,7 +542,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/3.jpg" alt="">
+              <img class="img-fluid" src="img/thumbnails/3.png" alt="">
             </a>
             <div class="grid-caption">
               <h4>The Ultimate Guide to Microdosing</h4>
