--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="text-muted mb-4 text-left">
               <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering
                 av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde:
-                <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>). Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
+                <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>) Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
                 og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer,
                 nikotin og alkoholavhengighet eller angst.</p>
             </div>
