Fixed last picture

--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/4.jpg" alt="">
+              <img class="img-fluid" src="img/thumbnails/4.png" alt="">
             </a>
             <div class="grid-caption">
               <h4>Paul Austin: Microdosing Psychedelics</h4>
