Added click effect to buttons and removed outline

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="js-scroll-trigger mt-1" href="#page-top"><img height="30px" src="img/logo_nav.png" alt="" title="" /></img></a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler btn navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Meny
           <i class="fa fa-bars"></i>
         </button>
