Added more menu items to mobile navbar

--- a/index.html
+++ b/index.html
@@ -63,8 +63,29 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item">
+            <li class="nav-item showitem">
               <a class="nav-link js-scroll-trigger" href="#why">Om Mikrodosering</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#why">Hvorfor Mikrodosere</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#how">Hvordan Mikrodosere</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#quotes">Sitater</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#science">Forskning</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#benefits">Nytteeffekter</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#risk">Risiko</a>
+            </li>
+            <li class="nav-item hideitem">
+              <a class="nav-link js-scroll-trigger" href="#more">Mer Informasjon</a>
             </li>
             <li class="nav-item">
               <!-- a class="nav-link js-scroll-trigger" target="_blank" href="https://www.psynapse.no/">Psynapse.no</a -->
