--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="text-muted mb-4 text-left">
               <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering
                 av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde:
-                <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>) Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
+                <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>.) Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
                 og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer,
                 nikotin og alkoholavhengighet eller angst.</p>
             </div>
@@ -600,18 +600,18 @@
           <div class="container pt-4">
             <div class="row justify-content-center mb-4">
               <div class="col-xs-1 text-center mx-3">
-                <a target="_blank" href="https://www.youtube.com/channel/UCJvgq51GdSUJ68fBLPSxB6A">
-                  <i class="fab fa-youtube fa-2x"></i>
-                </a>
-              </div>
-              <div class="col-xs-1 text-center mx-3">
-                <a target="_blank" href="https://www.facebook.com/emmasofiaorg/">
+                <a target="_blank" href="https://www.facebook.com/psynapse.no/">
                   <i class="fab fa-facebook fa-2x"></i>
                 </a>
               </div>
               <div class="col-xs-1 text-center mx-3">
-                <a target="_blank" href="https://twitter.com/emmasofiaorg/">
+                <a target="_blank" href="https://twitter.com/psynapsenorge/">
                   <i class="fab fa-twitter fa-2x"></i>
+                </a>
+              </div>
+              <div class="col-xs-1 text-center mx-3">
+                <a target="_blank" href="https://www.instagram.com/psynapsenorway/">
+                  <i class="fab fa-instagram-square fa-2x"></i>
                 </a>
               </div>
             </div>
